# start-filament-bullet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-mac.sh  build-win.bat  vcpkg.json
doc/: Bullet Physics.md  Google Filament.md  README.md  embedded-in-flutter.drawio
script/: generate-mac.sh
src/: CMakeLists.txt  engine_c.cpp  engine_c.h  engine_core.cpp  engine_core.h  engine_filament_bullet.cpp  engine_filament_bullet.h
test/: CMakeLists.txt  engine_test.cpp
